# g-task2

./: CMakeLists.txt
source/: GradientOrientations.cpp  GradientOrientations.h  Utils.h  main.cpp
